--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   
   <body>
+   <h4 id><font size="5">個人ページに載せきれなかった写真と動画です！！</font></h2>
    <h4 id><font size="5">写真は定期的に更新されていきます！</font></h2>
    <br></br>
    <h2 id><font size="5">一年目</font></h2>
